# file_utils

./: .gitignore  README.md
trunk/: .gitignore  Makefile  Makefile.am  TODO  configure.ac  cp_mem.c  libdirectio.c  open.c
trunk/build-aux/: .gitattributes
trunk/git/: Makefile  TODO  commit-msg.commit_uuid  git-branches  git-ck  git-clean-bundles  git-commit-archive  git-config-sort  git-cscope  git-get-bundles  git-install-dist  git-make-bundle  git-prepare  git-prepare-init  git-rebase-all  git-remotes  git-set-version  git-skel  git-submodule-clean  git-submodule-commit  git-submodule-repeat  git-sync  git-update  git-verify  post-checkout.write-protect
trunk/git/gitskel/: .gitignore
trunk/git/gitskel/trunk/: .gitignore  Makefile.am  configure.ac
trunk/java/GlacierUtil/: GlacierUtil.java  Makefile
trunk/java/ManifestUtil/: ManifestUtil.java
trunk/lib/: lock_mtab
trunk/m4/: ax_func_error.m4  ax_linux_magic.m4  ax_map_hugetlb.m4  ax_o_tmpfile.m4  ax_util.m4
trunk/man/: Makefile.am  simpledb.1
trunk/perl/: mkchksums.pl
trunk/perl/xattrs/: .gitignore  Changes  MANIFEST  Makefile.PL  README  xattrs.xs
trunk/perl/xattrs/lib/: xattrs.pm
trunk/perl/xattrs/t/: xattrs.t
trunk/scripts/: Makefile.am  run_static_analyzer.sh  spec_to_h.pl
trunk/src/: .gitignore  Makefile  Makefile.am  README  TODO  attr_idx.c  backtrace.c  backtrace.h  bootstrap  common.h  configure.ac  cp_mem.c  debug.c  debug.h  distribute.conf.sample  fastcat.c  fastcp.c  glacier_util.java  libdirectio.c  md_verify.c  mkmanifest.c  open.c  open_pipes.c  project_db.c  project_db.spec  project_db_common.h  project_db_schema.json  replicate.c  replicate.conf.sample  replicate.spec  replicate_common.h  replicate_conf.c  replicate_conf.h  replicate_gram.h  replicate_trans.c  replicate_trans.h  simpledb.c  simpledb_obj.idl  sparse_scan.c  tmpfile.c  (+17 more)
trunk/src/git/: Makefile  git-check  git-commit-archive  git-get-bundles  git-install-dist  git-make-bundle  git-prepare  git-set-version  git-submodule-commit  git-verify  git-verify-archive  post-checkout.write-protect
trunk/src/glacier_util/src/: Makefile  glacier_util.java
trunk/src/libbackup/: .gitignore  Makefile  Makefile.am  backup_util.c  backup_util.h  blkdev.c  mount.c  util.c  util.h
trunk/src/libbackup/include/: Makefile  Makefile.am  backup.h
trunk/src/libbackup/include/backup/: Makefile  libbackup_common.h
trunk/src/man/: mkmanifest.1
trunk/src/scripts/: Makefile.am  run_static_analyzer.sh  spec_to_h.pl
trunk/src/sys_dep/: Makefile.am  sys_dep.h
trunk/src/sys_dep/generic/: context_new.c  fifo_copy.c  fifo_transfer.c  file_punch.c  file_send.c  fsync_fs.c  get_bsz.c  get_fs_stat.c  mmap_anonymous.c  openat_direct.c  openat_directory.c  openat_tmpfile.c  setresuid.c
trunk/src/sys_dep/linux/: context_new.c  fifo_copy.c  fifo_transfer.c  file_punch.c  file_send.c  fsync_fs.c  get_bsz.c  get_fs_stat.c  mmap_anonymous.c  openat_direct.c  openat_tmpfile.c  setresuid.c
trunk/vm_mgmt/: maint_funcs
